Revert "CLJ-2783 Update deprecated process of creating URLs in Java 20+"
This reverts commit 882d660114c95b9959ee6124a0f1a420d19d8d4f.